# FinStressTS

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt  setup.py
configs/: example_crypto_deepvar.yaml  example_crypto_naive.yaml  example_crypto_ratd.yaml  example_crypto_tempflow.yaml  example_crypto_timegrad.yaml  example_crypto_timemcl.yaml  example_crypto_tsflow.yaml  example_data_efficiency_naive.yaml  synthetic_case1_l1_deepvar.yaml
configs/dataset/: custom_csv_crypto.yaml
configs/model/: deepar.yaml  deepvar.yaml  naive.yaml  ratd.yaml  tempflow.yaml  timegrad.yaml  timemcl.yaml  tsflow.yaml
configs/task/: rolling_multivariate_forecasting.yaml
data/example/: example_returns_wide.csv
finprobts/: __init__.py  cli.py  config.py
finprobts/data/: __init__.py  io.py  preprocessing.py  registry.py  schema.py  windows.py
finprobts/evaluation/: __init__.py  metrics.py
finprobts/experiment/: __init__.py  data_efficiency.py  runner.py  synthetic_suite.py
finprobts/models/: __init__.py  _not_implemented.py  base.py  naive.py  registry.py  torch_utils.py
finprobts/models/deepar/: REFERENCE.md  __init__.py  model.py
finprobts/portfolio/: __init__.py
finprobts/simulators/: __init__.py  base.py  garch.py  har.py  hawkes.py  heavy_tail.py  regime_switching.py  zero_inflated.py
finprobts/synthetic/: __init__.py  generator.py  presets.py
tests/: test_cli.py  test_data.py  test_data_efficiency.py  test_models_evaluation.py  test_synthetic.py  test_synthetic_suite.py  test_torch_models.py
(+18 files in other folders)
